# Sentiment-Analysis

./: Makefile  README.md  main.ipynb  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: data_preprocessing.ipynb
sentiment_analysis/: dataset.py  features.py  plots.py
sentiment_analysis/modeling/: predict.py  train.py
